Fixes practical details images on mobile

--- a/source/stylesheets/components/_img.scss
+++ b/source/stylesheets/components/_img.scss
@@ -53,6 +53,7 @@ $Imgs: (
   background-size: contain;
   display: flex;
   justify-content: center;
+  overflow-x: hidden;
 
   img {
     height: 500px;
